# transfer-hook

./: .gitignore  Cargo.toml  Makefile  README.md  accounts-config.json  package.json  pnpm-lock.yaml  token-flow.sh
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-js-client.yml  publish-rust.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs
interface/: Cargo.toml
interface/src/: error.rs  instruction.rs  lib.rs  onchain.rs
program/: Cargo.toml
program/src/: lib.rs  processor.rs
program/tests/: functional.rs
scripts/: get-user-transfer-account.ts  initialize-transfer-account.ts  restart-test-validator.sh
