[package]
name = "spl-transfer-hook-interface"
version = "0.10.0"
description = "Solana Program Library Transfer Hook Interface"
documentation = "https://docs.rs/spl-transfer-hook-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.20.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = "2.2.1"
solana-cpi = "2.2.1"
solana-decode-error = "2.2.1"
solana-instruction = { version = "2.2.1", features = ["std"] }
solana-msg = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = { version = "2.2.1", features = ["curve25519"] }
spl-discriminator = "0.4.0"
spl-program-error = "0.7.0"
spl-tlv-account-resolution = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.0"
thiserror = "2.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dev-dependencies]
solana-program = "2.2.1"
tokio = { version = "1.44.1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
