[package]
name = "spl-transfer-hook-interface"
version = "1.0.0"
description = "Solana Program Library Transfer Hook Interface"
documentation = "https://docs.rs/spl-transfer-hook-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.23.2", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = "3.0.0"
solana-cpi = "3.0.0"
solana-instruction = { version = "3.0.0", features = ["std"] }
solana-msg = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-sdk-ids = "3.0.0"
solana-system-interface = "2.0.0"
spl-discriminator = "0.5.1"
spl-program-error = "0.8.0"
spl-tlv-account-resolution = "0.11.0"
spl-type-length-value = "0.9.0"
spl-pod = "0.7.1"
thiserror = "2.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dev-dependencies]
solana-program = "2.3.0"
tokio = { version = "1.47.1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
