[package]
name = "spl-transfer-hook-example"
version = "0.6.0"
description = "Solana Program Library Transfer Hook Example Program"
documentation = "https://docs.rs/spl-transfer-hook-example"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["forbid-additional-mints"]
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-program = "2.2.1"
spl-tlv-account-resolution = "0.10.0"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.9.0", path = "../interface" }
spl-type-length-value = "0.8.0"

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
