[package]
name = "spl-transfer-hook-cli"
version = "0.2.0"
description = "Solana Program Library Transfer Hook Command-line Utility"
documentation = "https://docs.rs/spl-transfer-hook-cli"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
solana-clap-v3-utils = "2.2.0"
solana-cli-config = "2.2.0"
solana-client = "2.2.0"
solana-logger = "2.2.1"
solana-remote-wallet = "2.2.0"
solana-sdk = "2.2.1"
spl-tlv-account-resolution = { version = "0.9.0", features = ["serde-traits"] }
spl-transfer-hook-interface = { version = "0.9.0", path = "../../interface" }
strum = "0.26"
strum_macros = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"

[dev-dependencies]
solana-test-validator = "2.2.0"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.13.0"
spl-transfer-hook-example = { version = "0.6.0", path = "../../program" }

[lints]
workspace = true

[[bin]]
name = "spl-transfer-hook"
path = "src/main.rs"
